llmx-rs/tui/src/chatwidget/snapshots/llmx_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Reasoning Level for gpt-5-llmx

  1. Low               Fastest responses with limited reasoning
  2. Medium (default)  Dynamically adjusts reasoning based on the task
› 3. High (current)    Maximizes reasoning depth for complex or ambiguous
                       problems
                       ⚠ High reasoning effort can quickly consume Plus plan
                       rate limits.

  Press enter to confirm or esc to go back
